Add CyvoraX feature modules and Windows release packaging